# rag-scrape

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.agents/: AGENTS.md
.github/workflows/: ci.yml
docs/: handoff_notes.md  system_overview.md
src/: config.py  log_config.py  observability.py
src/graph/: generator.py  graph.py  router.py  schemas.py  state.py
src/graph/nodes/: __init__.py  rag_node.py  scraper_node.py
src/rag/: chunker.py  core.py  embeddings.py
src/scraper/: core.py  exceptions.py  voz_parser.py  voz_search.py
tests/: test_chunker.py  test_cli.py  test_e2e.py  test_embeddings.py  test_generator.py  test_graph.py  test_log_config.py  test_nodes.py  test_observability.py  test_rag.py  test_router.py  test_scraper.py  test_voz_parser.py  test_voz_search.py
