[project]
name = "rag-scrape"
version = "0.1.0"
description = "RAG + Scraping tool for Vietnamese forums"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "pymilvus>=2.4",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "langchain-google-genai>=2.1",
    "scrapling>=0.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
